tests/fixtures/valid/nullable-dates.omts
{
  "omts_version": "0.1.0",
  "snapshot_date": "2026-02-22",
  "file_salt": "a1b2c3d4e5f67890a1b2c3d4e5f67890a1b2c3d4e5f67890a1b2c3d4e5f67890",
  "nodes": [
    {
      "id": "org-null-dates",
      "type": "organization",
      "name": "Null Dates Corp",
      "identifiers": [
        {
          "scheme": "lei",
          "value": "5493006MHB84DD0ZWV18",
          "valid_from": "2020-01-01",
          "valid_to": null
        }
      ]
    },
    {
      "id": "org-target",
      "type": "organization",
      "name": "Target Corp"
    },
    {
      "id": "att-open",
      "type": "attestation",
      "name": "Open-ended Cert",
      "attestation_type": "certification",
      "valid_from": "2025-01-01",
      "valid_to": null
    }
  ],
  "edges": [
    {
      "id": "e-ownership",
      "type": "ownership",
      "source": "org-null-dates",
      "target": "org-target",
      "properties": {
        "percentage": 100.0,
        "direct": true,
        "valid_from": "2020-01-01",
        "valid_to": null
      }
    }
  ]
}
