tests/fixtures/invalid/missing-node-id.omts
{
  "omts_version": "0.1.0",
  "snapshot_date": "2026-02-18",
  "file_salt": "a1b2c3d4e5f67890a1b2c3d4e5f67890a1b2c3d4e5f67890a1b2c3d4e5f67890",
  "nodes": [
    {
      "type": "organization",
      "name": "Acme Corp"
    }
  ],
  "edges": []
}
